--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* # ~ ~ ~ ~ ~ # # ~ ~ ~ ~ ~ # FONTS # ~ ~ ~ ~ ~ # # ~ ~ ~ ~ ~ # */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+
+.dm-sans {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* # ~ ~ ~ ~ ~ # # ~ ~ ~ ~ ~ # CUSTOM CSS # ~ ~ ~ ~ ~ # # ~ ~ ~ ~ ~ # */
